# bpb

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: agent-boundary-check.yml  ci.yaml
bpb/: Cargo.toml
bpb-pkgx-cli/: Cargo.toml
bpb-pkgx-cli/src/: config.rs  key_data.rs  keychain.rs  legacy_config.rs  main.rs
bpb/src/: config.rs  key_data.rs  keychain.rs  main.rs
pbp/: Cargo.toml
pbp-pkgx-lib/: Cargo.toml  README.md
pbp/examples/: print.rs  read_sig.rs  round_trip.rs  verify_sig.rs
src/: config.rs  keychain.rs  main.rs
